// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefinementList rendering with facets 1`] = `
<div
  className="root customClassName"
>
  <ul
    className="list"
  >
    <li
      className="item"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1200,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": false,
              "label": "Amazon",
              "url": undefined,
            },
          }
        }
      />
    </li>
    <li
      className="item selectedItem"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1000,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": true,
              "label": "Google",
              "url": undefined,
            },
          }
        }
      />
    </li>
  </ul>
</div>
`;

exports[`RefinementList rendering with facets and disabled show more 1`] = `
<div
  className="root customClassName"
>
  <ul
    className="list"
  >
    <li
      className="item"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1200,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": false,
              "label": "Amazon",
              "url": undefined,
            },
          }
        }
      />
    </li>
    <li
      className="item selectedItem"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1000,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": true,
              "label": "Google",
              "url": undefined,
            },
          }
        }
      />
    </li>
  </ul>
  <button
    className="showMore disabledShowMore"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "isShowingMore": false,
        },
      }
    }
  />
</div>
`;

exports[`RefinementList rendering with facets and show more 1`] = `
<div
  className="root customClassName"
>
  <ul
    className="list"
  >
    <li
      className="item"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1200,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": false,
              "label": "Amazon",
              "url": undefined,
            },
          }
        }
      />
    </li>
    <li
      className="item selectedItem"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1000,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": true,
              "label": "Google",
              "url": undefined,
            },
          }
        }
      />
    </li>
  </ul>
  <button
    className="showMore"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "isShowingMore": false,
        },
      }
    }
  />
</div>
`;

exports[`RefinementList rendering with facets from search 1`] = `
<div
  className="root customClassName"
>
  <div
    className="searchBox"
  >
    <div
      className="ais-SearchBox"
    >
      <form
        action=""
        className="ais-SearchBox-form"
        noValidate={true}
        onReset={[Function]}
        onSubmit={[Function]}
        role="search"
      >
        <input
          autoCapitalize="off"
          autoComplete="off"
          autoCorrect="off"
          autoFocus={false}
          className="ais-SearchBox-input"
          disabled={false}
          maxLength={512}
          onChange={[Function]}
          placeholder="Search"
          spellCheck={false}
          type="search"
          value=""
        />
        <button
          className="ais-SearchBox-submit"
          dangerouslySetInnerHTML={
            Object {
              "__html": Object {
                "cssClasses": Object {
                  "form": "ais-SearchBox-form",
                  "input": "ais-SearchBox-input",
                  "loadingIcon": "ais-SearchBox-loadingIcon",
                  "loadingIndicator": "ais-SearchBox-loadingIndicator",
                  "reset": "ais-SearchBox-reset",
                  "resetIcon": "ais-SearchBox-resetIcon",
                  "root": "ais-SearchBox",
                  "submit": "ais-SearchBox-submit",
                  "submitIcon": "ais-SearchBox-submitIcon",
                },
              },
            }
          }
          hidden={false}
          title="Submit the search query."
          type="submit"
        />
        <button
          className="ais-SearchBox-reset"
          dangerouslySetInnerHTML={
            Object {
              "__html": Object {
                "cssClasses": Object {
                  "form": "ais-SearchBox-form",
                  "input": "ais-SearchBox-input",
                  "loadingIcon": "ais-SearchBox-loadingIcon",
                  "loadingIndicator": "ais-SearchBox-loadingIndicator",
                  "reset": "ais-SearchBox-reset",
                  "resetIcon": "ais-SearchBox-resetIcon",
                  "root": "ais-SearchBox",
                  "submit": "ais-SearchBox-submit",
                  "submitIcon": "ais-SearchBox-submitIcon",
                },
              },
            }
          }
          hidden={true}
          title="Clear the search query."
          type="reset"
        />
        <span
          className="ais-SearchBox-loadingIndicator"
          dangerouslySetInnerHTML={
            Object {
              "__html": Object {
                "cssClasses": Object {
                  "form": "ais-SearchBox-form",
                  "input": "ais-SearchBox-input",
                  "loadingIcon": "ais-SearchBox-loadingIcon",
                  "loadingIndicator": "ais-SearchBox-loadingIndicator",
                  "reset": "ais-SearchBox-reset",
                  "resetIcon": "ais-SearchBox-resetIcon",
                  "root": "ais-SearchBox",
                  "submit": "ais-SearchBox-submit",
                  "submitIcon": "ais-SearchBox-submitIcon",
                },
              },
            }
          }
          hidden={true}
        />
      </form>
    </div>
  </div>
  <ul
    className="list"
  >
    <li
      className="item"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1200,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": false,
              "label": "Amazon",
              "url": undefined,
            },
          }
        }
      />
    </li>
    <li
      className="item selectedItem"
      onClick={[Function]}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "attribute": "attribute",
              "count": 1000,
              "cssClasses": Object {
                "checkbox": "checkbox",
                "count": "count",
                "disabledShowMore": "disabledShowMore",
                "item": "item",
                "label": "label",
                "labelText": "labelText",
                "list": "list",
                "noRefinementRoot": "noRefinementRoot",
                "noResults": "noResults",
                "root": "root",
                "searchBox": "searchBox",
                "selectedItem": "selectedItem",
                "showMore": "showMore",
              },
              "isRefined": true,
              "label": "Google",
              "url": undefined,
            },
          }
        }
      />
    </li>
  </ul>
</div>
`;

exports[`RefinementList rendering without facets 1`] = `
<div
  className="root noRefinementRoot customClassName"
/>
`;

exports[`RefinementList rendering without facets from search 1`] = `
<div
  className="root noRefinementRoot customClassName"
>
  <div
    className="searchBox"
  >
    <div
      className="ais-SearchBox"
    >
      <form
        action=""
        className="ais-SearchBox-form"
        noValidate={true}
        onReset={[Function]}
        onSubmit={[Function]}
        role="search"
      >
        <input
          autoCapitalize="off"
          autoComplete="off"
          autoCorrect="off"
          autoFocus={false}
          className="ais-SearchBox-input"
          disabled={false}
          maxLength={512}
          onChange={[Function]}
          placeholder="Search"
          spellCheck={false}
          type="search"
          value=""
        />
        <button
          className="ais-SearchBox-submit"
          dangerouslySetInnerHTML={
            Object {
              "__html": Object {
                "cssClasses": Object {
                  "form": "ais-SearchBox-form",
                  "input": "ais-SearchBox-input",
                  "loadingIcon": "ais-SearchBox-loadingIcon",
                  "loadingIndicator": "ais-SearchBox-loadingIndicator",
                  "reset": "ais-SearchBox-reset",
                  "resetIcon": "ais-SearchBox-resetIcon",
                  "root": "ais-SearchBox",
                  "submit": "ais-SearchBox-submit",
                  "submitIcon": "ais-SearchBox-submitIcon",
                },
              },
            }
          }
          hidden={false}
          title="Submit the search query."
          type="submit"
        />
        <button
          className="ais-SearchBox-reset"
          dangerouslySetInnerHTML={
            Object {
              "__html": Object {
                "cssClasses": Object {
                  "form": "ais-SearchBox-form",
                  "input": "ais-SearchBox-input",
                  "loadingIcon": "ais-SearchBox-loadingIcon",
                  "loadingIndicator": "ais-SearchBox-loadingIndicator",
                  "reset": "ais-SearchBox-reset",
                  "resetIcon": "ais-SearchBox-resetIcon",
                  "root": "ais-SearchBox",
                  "submit": "ais-SearchBox-submit",
                  "submitIcon": "ais-SearchBox-submitIcon",
                },
              },
            }
          }
          hidden={true}
          title="Clear the search query."
          type="reset"
        />
        <span
          className="ais-SearchBox-loadingIndicator"
          dangerouslySetInnerHTML={
            Object {
              "__html": Object {
                "cssClasses": Object {
                  "form": "ais-SearchBox-form",
                  "input": "ais-SearchBox-input",
                  "loadingIcon": "ais-SearchBox-loadingIcon",
                  "loadingIndicator": "ais-SearchBox-loadingIndicator",
                  "reset": "ais-SearchBox-reset",
                  "resetIcon": "ais-SearchBox-resetIcon",
                  "root": "ais-SearchBox",
                  "submit": "ais-SearchBox-submit",
                  "submitIcon": "ais-SearchBox-submitIcon",
                },
              },
            }
          }
          hidden={true}
        />
      </form>
    </div>
  </div>
  <div
    className="noResults"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {},
      }
    }
  />
</div>
`;
